[workspace]
resolver = "2"

members = [ "imperat", "imperat-common", "imperat-macros"]
default-members = [ "imperat", "imperat-common", "imperat-macros"]

[workspace.dependencies]
imperat-common = { path = "imperat-common" }
imperat = { path = "imperat" }
imperat-macros = { path = "imperat-macros" }
variadics_please = "^1.1"
