[package]
name = "imperat"
version = "0.1.0"
description = "Library to enable dependency injection and management of step-by-step flows."
keywords = ["runner", "dependency", "injection", "imperative", "procedure"]
categories = ["development-tools"]
authors = ["Billy Rhoades <me@brod.es>"]
repository = "https://github.com/brhoades/imperat"
license = "MIT"
edition = "2024"

[dependencies]
anyhow = { version = "1.0", optional = true }
async-trait = "^0.1"
futures = "^0.3"
imperat-common = { workspace = true }
imperat-macros = { workspace = true }
thiserror = "^2.0"
variadics_please = { workspace = true }

[dev-dependencies]
tokio = { version = "^1.0", features = ["rt", "macros", "time"] }

[features]
anyhow = ["dep:anyhow"]
