[package]
name = "macros"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { workspace = true }
proc-macro2 = "^1.0.80"
quote = "^1.0.30"
syn = {version = "^1.0", features = ["full"]}
variadics_please = { workspace = true }

[dev-dependencies]
impereat = { workspace = true } # integration tests

[lib]
proc-macro = true